simple api call and display

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,3 +45,8 @@ body{
     background-color: gray;
 }
 
+.score, .myButtons{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 2px;
+}
